# rust-pdf-viewer

./: .gitignore  ARCHITECTURE_DIAGRAM.md  Cargo.toml  README.md  README_JP.md  TECHNICAL_DOCUMENTATION.md  rust_pdf_icon.icns
assets/: style.css
src/: main.rs
src/ai/: mod.rs  providers.rs  search.rs
src/pdf/: mod.rs  renderer.rs  text.rs  utils.rs
src/storage/: api_keys.rs  bookmarks.rs  config.rs  flashcards.rs  markers.rs  mod.rs  recent_files.rs  rotations.rs
src/types/: ai.rs  mod.rs  pdf.rs  storage.rs  ui.rs
src/ui/components/: mod.rs
src/ui/components/popups/: bookmarks.rs  flashcards.rs  markers.rs  mod.rs  recent_files.rs
