[package]
name = "pdf_reader"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "PDF Viewer"
identifier = "com.rustapp.pdfviewer"
icon = ["rust_pdf_icon.icns"]
version = "1.0.0"
resources = ["lib/libpdfium.dylib"]
copyright = "Copyright (c) 2024 PDF Viewer"
category = "Productivity"
short_description = "Advanced PDF viewer with text selection and AI search"
long_description = "A modern PDF viewer application built with Rust and Dioxus, featuring text selection, AI-powered search capabilities, and responsive design."

[dependencies]
pdfium-render = "0.8"
anyhow = "1.0"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dioxus = "0.5"
dioxus-desktop = "0.5"
base64 = "0.22"
futures = "0.3"
rfd = "0.15.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.17.0", features = ["v4"] }
